Fixed text not appearing on Firefox error. Fixed padding error that pushed inputs off new user page on dashboard. Changed access denied message to say permission instead of permissions.

--- a/managr/client/profiles/dashboard.css
+++ b/managr/client/profiles/dashboard.css
@@ -204,7 +204,7 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   margin-bottom: 2%;
   margin-top: 8%;
-  padding: 4%;
+  padding: 24px;
   height: 32em;
 }
 
